Fixed pods targets
- Better configured the pods to only correcty link with the necessary targets

--- a/SlackTeamExplorer/Makefile
+++ b/SlackTeamExplorer/Makefile
@@ -1,6 +1,7 @@
 bootstrap:
 	bundle install --path="vendor/bundle"
 	bundle update
+	bundle exec pod keys set "SlackToken" "xoxp-4698769766-4698769768-4898023905-7a1afa"
 	bundle exec pod install
 	bundle exec pod update
 
