Configured project for «generic» prefix
- Following the steps of 's List project; this project is configured to use a generic `prefix` that will make it easible to use with very few fixes

--- a/SlackTeamExplorer/SlackTeamExplorer WatchKit Extension/Info.plist
+++ b/SlackTeamExplorer/SlackTeamExplorer WatchKit Extension/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AAPLSlackExplorerBundlePrefix</key>
+	<string>${SLACKEXPLORER_BUNDLE_PREFIX}</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -9,7 +11,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>es.estebantorr.SlackTeamExplorer.watchkitextension</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -27,7 +29,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>es.estebantorr.SlackTeamExplorer.watchkitapp</string>
+			<string>${SLACKEXPLORER_BUNDLE_PREFIX}.SlackTeamExplorer.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
