--- a/SlackTeamExplorer/SlackTeamExplorer WatchKit Extension/SlackTeamExplorer WatchKit Extension.entitlements
+++ b/SlackTeamExplorer/SlackTeamExplorer WatchKit Extension/SlackTeamExplorer WatchKit Extension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.SlackTeamExplorer</string>
+		<string>group.es.estebantorr.SlackTeamExplorer.SlackExplorer.Data</string>
 	</array>
 </dict>
 </plist>
