--- a/SlackTeamExplorer/SlackTeamExplorer/SlackTeamExplorer.entitlements
+++ b/SlackTeamExplorer/SlackTeamExplorer/SlackTeamExplorer.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.SlackTeamExplorer</string>
+		<string>group.${SLACKEXPLORER_BUNDLE_PREFIX}.SlackExplorer.Data</string>
 	</array>
 </dict>
 </plist>
